--- a/.github/workflows/run_scripts.yaml
+++ b/.github/workflows/run_scripts.yaml
@@ -36,6 +36,6 @@ jobs:
       - name: Upload table to the workflow tab
         uses: actions/upload-artifact@v2
         with:
-          name: results
-          path: results.zip
+          name: admixture_results
+          path: admixture_results.zip
 
