--- a/.github/workflows/run_scripts.yaml
+++ b/.github/workflows/run_scripts.yaml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@v1
+      #- name: Install R
+      #  uses: r-lib/actions/setup-r@v1
 
       - name: Get ADMIXTURE
         run: ./get_admixture.sh
